syntax = "proto3";

package cheers.auth.v1;

import "cheers/type/user/user.proto";
import "google/api/annotations.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/gen/go/cheers/auth/v1;auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  }

  rpc CreateModerator(CreateModeratorRequest) returns (CreateModeratorResponse) {
    option (google.api.http) = {
      post: "/v1/auths/moderator"
      body: "*"
    };
  }

  rpc DeleteModerator(DeleteModeratorRequest) returns (DeleteModeratorResponse) {
    option (google.api.http) = {
      delete: "/v1/auths/moderator"
    };
  }

  rpc CreateBusinessAccount(CreateBusinessAccountRequest) returns (CreateBusinessAccountResponse) {
    option (google.api.http) = {
      post: "/v1/auths/business"
      body: "*"
    };
  }

  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse) {
    option (google.api.http) = {
      post: "/v1/auths/verify"
      body: "*"
    };
  }

  rpc DeleteVerifyUser(VerifyUserRequest) returns (VerifyUserResponse) {
    option (google.api.http) = {
      delete: "/v1/auths/verify"
    };
  }
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string public_key = 3;
}

message RegisterResponse {
  cheers.type.User user = 1;
}

message LoginRequest {
  string id_token = 1;
}

message LoginResponse {
  cheers.type.User user = 1;
}

message VerifyUserRequest {
  string user_id = 1;
}

message VerifyUserResponse {
}

message DeleteModeratorRequest {
  string user_id = 1;
}

message DeleteModeratorResponse {
}

message CreateModeratorRequest {
  string user_id = 1;
}

message CreateModeratorResponse {
}

message CreateBusinessAccountRequest {
  string user_id = 1;
}

message CreateBusinessAccountResponse {
}
